# compiler

./: .gitignore  .ocamlformat  ComplexNonsense.evi  ComplexNonsense.evo  Makefile  README.md  a.evo  dune-project  envoke  envoke-build  evo.opam  evoke  evoke-build  guide.txt  t.txt  tb.txt
sample/: a.evo  b.evo  main.evo  module.evo
src/ast/: ast.ml  astNode.ml  astUtil.ml  dune  node.ml  sexpConvert.ml  sexpConvert.mli  sexpPrinter.ml  sexpPrinter.mli
src/cli/: argParser.ml  argParser.mli  dune  fileManager.ml  fileManager.mli  main.ml
src/driver/: dune  main.ml
src/lexer/: README.md  dune  exampleModule.ml  exampleModule.mli  lex.ml  lexUtil.ml  lexUtil.mli  lexer.ml  lexer.mli  lexer.mll  tokenizer.ml  tokenizer.mli
src/parser/: dune  fails.messages  parse.ml  parseUtil.ml  parser.automaton  parser.mly  parser.old.mly  parserUtil.ml  parserUtil.mli  syntaxError.ml
src/util/: dune  position.ml  sexpPrinter.ml  sexpPrinter.mli  unicode.ml
test/example/: README.md  arraylist.evo  linkedlist.parsed  singlestmt.evo  singlestmt.evo.expected  singlestmt.parsed
test/integration/lexer/: dune  testLex.ml
test/integration/parser/: dune  testParse.ml
test/lexer/: A.evo  A.evo.expected  A.lexed  README.md  dune  noChar.lexed  noChar2.evo.expected  noStr.evo.expected  testLex.ml  test_lex.ml  tests.expected
test/lexer/example/: linkedlist.evo  linkedlist.evo.expected
test/parser/: dune  parsedGrammar.mll  testParse.ml  test_parse.ml
test/unit/: dune  testLexer.ml  testParser.ml  testSexp.ml  unit.ml
test/util/: dune  eth.ml  eth.mli  lexer.ml
(+51 files in other folders)
