(executable
 (public_name test-sexp)
 (name testSexp)
 (libraries ast unit)
 (modules testSexp))

(executable
 (public_name test-lexer)
 (name testLexer)
 (modules testLexer)
 (libraries lex unit))

(executable
 (public_name test-parser)
 (name testParser)
 (modules testParser)
 (libraries parse lex unit eth)
 (instrumentation
  (backend bisect_ppx)))

(library
 (name unit)
 (modules unit)
 (libraries ounit2))
